// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has custom text alignment 1`] = `
.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:right"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:center"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c2 {
  cursor: pointer;
  margin-right: var(--spacing-1x);
}

.c2:focus {
  outline: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#57666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 1
        </div>
      </th>
      <th
        aria-sort="none"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#57666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 2
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tbody tr:nth-child(odd) {
  background-color: #F8F9FA;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c0 {
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  border-bottom: 1px solid #D9DDE2;
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 tr:last-child td {
  border-bottom: 0;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        role="cell"
      >
        Hello
      </td>
      <td
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;
